deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspost
  labels:
    app: statuspost
    app.kubernetes.io/name: statuspost
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: statuspost
